--- a/employeemanagementsystem/src/main/resources/application.properties
+++ b/employeemanagementsystem/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_management_system?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-spirng.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+#jpa details
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.format_sql=true
